// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Button Base 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn-base svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Button Blank 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-blank svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Button Overrides 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn my-custom-css-klass svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Button Type Reset 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn svelte-ggffyy"
    type="reset"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Button Type Submit 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn svelte-ggffyy"
    type="submit"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Default Bordered 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-bordered svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Default Bordered Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-bordered btn-rounded svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Default Circle 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-circle btn-rounded svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Default Raised 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-raised svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Default Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-rounded svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Disabled 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn disabled svelte-ggffyy"
    disabled=""
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Groups Button Group 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    aria-label="Appropriate label for your button group"
    class="btn-group svelte-uehdn7"
    role="group"
  >
    <button
      class="btn svelte-ggffyy"
      type="button"
    >
      One
    </button>
     
    <button
      class="btn svelte-ggffyy"
      type="button"
    >
      Two
    </button>
     
    <button
      class="btn svelte-ggffyy"
      type="button"
    >
      Three
    </button>
  </div>
   
  <div
    aria-label="Appropriate label for your button group"
    class="btn-group svelte-uehdn7"
    role="group"
  >
    <button
      class="btn btn-primary svelte-ggffyy"
      type="button"
    >
      One
    </button>
     
    <button
      class="btn btn-primary svelte-ggffyy"
      type="button"
    >
      Two
    </button>
     
    <button
      class="btn btn-primary svelte-ggffyy"
      type="button"
    >
      Three
    </button>
  </div>
   
  <div
    aria-label="Appropriate label for your button group"
    class="btn-group svelte-uehdn7"
    role="group"
  >
    <button
      class="btn btn-secondary svelte-ggffyy"
      type="button"
    >
      One
    </button>
     
    <button
      class="btn btn-secondary svelte-ggffyy"
      type="button"
    >
      Two
    </button>
     
    <button
      class="btn btn-secondary svelte-ggffyy"
      type="button"
    >
      Three
    </button>
  </div>
   
  <div
    style="margin-bottom: 40px;"
  />
   
  <div
    aria-label="Appropriate label for your button group"
    class="btn-group svelte-uehdn7"
    role="group"
  >
    <button
      class="btn btn-primary btn-bordered svelte-ggffyy"
      type="button"
    >
      One
    </button>
     
    <button
      class="btn btn-primary btn-bordered svelte-ggffyy"
      type="button"
    >
      Two
    </button>
     
    <button
      class="btn btn-primary btn-bordered svelte-ggffyy"
      type="button"
    >
      Three
    </button>
  </div>
   
  <div
    aria-label="Appropriate label for your button group"
    class="btn-group svelte-uehdn7"
    role="group"
  >
    <button
      class="btn btn-secondary btn-bordered svelte-ggffyy"
      type="button"
    >
      One
    </button>
     
    <button
      class="btn btn-secondary btn-bordered svelte-ggffyy"
      type="button"
    >
      Two
    </button>
     
    <button
      class="btn btn-secondary btn-bordered svelte-ggffyy"
      type="button"
    >
      Three
    </button>
  </div>
</section>
`;

exports[`Storyshots Button Icons Button Icons 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    style="display: inline-flex;"
  >
    <button
      class="btn btn-primary btn-rounded svelte-ggffyy"
      type="button"
    >
      Download
    
      <svg
        aria-hidden="true"
        class="btn-icon-right svelte-139qr6r"
        data-custom-icon="true"
        fill="currentColor"
        focusable="false"
        height="14px"
        role="img"
        stroke="currentColor"
        stroke-width="0"
        version="1.1"
        viewBox="0 0 16 16"
        width="14px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <desc>
          Download icon graphic
        </desc>
        <path
          d="M14 11v2h-12v-2h-2v4h16v-4zM12 6h-3v-5h-2v5h-3l4 6z"
        />
      </svg>
    </button>
     
    <button
      class="btn btn-primary btn-rounded svelte-ggffyy"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="btn-icon-left svelte-139qr6r"
        data-custom-icon="true"
        fill="currentColor"
        focusable="false"
        height="14px"
        role="img"
        stroke="currentColor"
        stroke-width="0"
        version="1.1"
        viewBox="0 0 16 16"
        width="14px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <desc>
          Phone icon graphic
        </desc>
        <path
          d="M11 10c-1 1-1 2-2 2s-2-1-3-2-2-2-2-3 1-1 2-2-2-4-3-4-3 3-3 3c0 2 2.055 6.055 4 8s6 4 8 4c0 0 3-2 3-3s-3-4-4-3z"
        />
      </svg>
      
    Call
    </button>
  </div>
</section>
`;

exports[`Storyshots Button Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-large svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Primary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Primary Block 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-block svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Primary Bordered 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-bordered svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Primary Bordered Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-bordered btn-rounded svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Primary Circle 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-bordered btn-circle svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Primary Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-rounded svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Primary Rounded Raised 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-primary btn-rounded btn-raised svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Primary Test 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-circle svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Secondary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Secondary Bordered 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-bordered svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Secondary Bordered Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-bordered btn-rounded svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Secondary Circle 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-circle svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Secondary Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-rounded svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Secondary Rounded Raised 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-secondary btn-rounded btn-raised svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Button Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="btn btn-small svelte-ggffyy"
    type="button"
  >
    <span
      class="svelte-c6swhi"
    >
      Go
    </span>
  </button>
</section>
`;

exports[`Storyshots Cards Card 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="card svelte-1ymuaur"
  >
    <div
      class="custom-wrap svelte-o6i4ru"
      style="flex: 1;"
    >
      <h1>
        Default Card
      </h1>
    </div>
     
    <div
      class="custom-wrap svelte-o6i4ru"
      style="flex: 2;"
    >
      <p>
        This card comes with some
      
        <span
          class="quoted"
        >
          skinning css
        </span>
        
      included. Also, it's a flex container with direction of
      
        <i>
          row
        </i>
        
      , so each child with a
      
        <i>
          flex
        </i>
        
      rule with get placed as a sort of column in the row (until the viewport is
      shrunk below a certain breakpoint and then it will stack).
      </p>
    </div>
  </div>
   
  <div
    class="card card-stacked svelte-1ymuaur"
  >
    <div
      class="custom-wrap svelte-o6i4ru"
    >
      <h1
        style="flex: 1; display: flex; justify-content: center;"
      >
        Stacked Card
      </h1>
       
      <div
        style="flex 1;"
      >
        <p>
          This card comes with some
        
          <span
            class="quoted"
          >
            skinning css
          </span>
          
        included. Also, it's a flex container with direction of
        
          <i>
            column
          </i>
          
        , so each child with a
        
          <i>
            flex
          </i>
          
        rule with get placed as a sort of row in the stack.
        </p>
      </div>
    </div>
  </div>
   
  <div
    class="card-base svelte-1ymuaur"
  >
    <div
      class="custom-card custom-wrap svelte-o6i4ru"
    >
      <h1>
        Card With No Skinning
      </h1>
       
      <p>
        This card omits any
      
        <span
          class="quoted"
        >
          skinning css
        </span>
        
      but includes the base or core CSS. So, we can style it without the need to
      resort to css custom theming at all -- we simply define our own customized
      styles. It does come with some base styles but hopefully not too
      opinionated for your use case.
      </p>
    </div>
  </div>
</section>
`;

exports[`Storyshots FlexGrid Grid 1`] = `
<section
  class="storybook-snapshot-container"
>
  <section>
    <div
      class="flexgrid-container custom-grid-klass svelte-1ibu88c"
    >
      <div
        class="row svelte-5cb8tq"
      >
        <div
          class="col-xs-12 col-xs-12 col-sm-4 col-lg-6 col-xl-4 svelte-1qehlo9"
        >
          <p
            class="svelte-1837d7s"
          >
            xs=12 sm=4 lg=6 xl=4
          </p>
        </div>
         
        <div
          class="col-xs-12 col-xs-12 col-sm-4 col-lg-6 col-xl-8 svelte-1qehlo9"
        >
          <p
            class="svelte-1837d7s"
          >
            xs=12 sm=4 lg=6 xl=8
          </p>
        </div>
      </div>
    </div>
  </section>
   
  <section>
    <div
      class="flexgrid-container customKlass1 customKlass2 svelte-1ibu88c"
    >
      <div
        class="row reverse-true svelte-5cb8tq"
      >
        <h1>
          test
        </h1>
      </div>
    </div>
  </section>
   
  <section>
    <div
      class="flexgrid-container svelte-1ibu88c"
    >
      <div
        class="row svelte-5cb8tq"
      >
        <div
          class="col-sm-2 svelte-1qehlo9"
        >
          <p
            class="svelte-1837d7s"
          >
            sm="2"
          </p>
        </div>
         
        <div
          class="col-sm-2 col-sm-offset-1 svelte-1qehlo9"
        >
          <p
            class="svelte-1837d7s"
          >
            sm=2 smOffset=1
          </p>
        </div>
         
        <div
          class="col-sm-2 col-sm-offset-1 svelte-1qehlo9"
        >
          <p
            class="svelte-1837d7s"
          >
            sm=2 smOffset=1
          </p>
        </div>
         
        <div
          class="col-sm-2 col-sm-offset-2 svelte-1qehlo9"
        >
          <p
            class="svelte-1837d7s"
          >
            sm=2 smOffset=2
          </p>
        </div>
      </div>
    </div>
  </section>
   
  <section>
    <h1>
      Row attributes test. Maybe ignore this ;)
    </h1>
     
    <div
      class="flexgrid-container custom-grid-klass svelte-1ibu88c"
    >
      <div
        class="row start-sm center-md end-lg top-xl middle-xs bottom-xs around-sm between-lg svelte-5cb8tq"
      />
    </div>
  </section>
</section>
`;

exports[`Storyshots Header Example Header Test 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="header header-sticky svelte-1yhgofs"
  >
    <div
      class="header-content svelte-1yhgofs"
    >
      <div
        class="svelte-13f3vfs"
        slot="logoleft"
      >
        logo left
      </div>
       
       
      <nav>
        <ul
          class="header-nav nav-overrides svelte-xmqeos"
        >
          <li
            class="header-nav-item svelte-1c5h3nr"
          >
            <a
              class="svelte-13f3vfs"
              href="#home"
            >
              Home
            </a>
          </li>
           
          <li
            class="header-nav-item svelte-1c5h3nr"
          >
            <a
              class="svelte-13f3vfs"
              href="#products"
            >
              Products
            </a>
          </li>
           
          <li
            class="header-nav-item svelte-1c5h3nr"
          >
            <a
              class="svelte-13f3vfs"
              href="#services"
            >
              Services
            </a>
          </li>
           
          <li
            class="header-nav-item svelte-1c5h3nr"
          >
            <a
              class="svelte-13f3vfs"
              href="#about"
            >
              About
            </a>
          </li>
        </ul>
      </nav>
       
       
      <div
        class="svelte-13f3vfs"
        slot="logoright"
      >
        logo right
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Input Addons Example Input Addons Test 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-q22ypa"
      for="myUniqueId"
    >
      Input with addons
    </label>
     
    <div
      class="input-addon-container svelte-q22ypa"
    >
      <div
        slot="addonLeft"
      >
        <div
          class="input-addon-left svelte-cf9ws0"
        >
          <span>
            L
          </span>
        </div>
      </div>
       
      <input
        class="input input-has-left-addon input-has-right-addon svelte-q22ypa"
        id="myUniqueId"
        type="text"
      />
       
      <div
        slot="addonRight"
      >
        <div
          class="input-addon-right svelte-cf9ws0"
        >
          <span>
            R
          </span>
        </div>
      </div>
    </div>
     
  </div>
</section>
`;

exports[`Storyshots Input Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-q22ypa"
      for="myUniqueId"
    >
      Default input
    </label>
     
    <input
      class="input svelte-q22ypa"
      id="myUniqueId"
      type="text"
    />
     
  </div>
</section>
`;

exports[`Storyshots Input Disabled 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-q22ypa"
      for="myUniqueId"
    >
      Disabled input
    </label>
     
    <input
      class="input disabled svelte-q22ypa"
      disabled=""
      id="myUniqueId"
      type="text"
    />
     
  </div>
</section>
`;

exports[`Storyshots Input Email 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-q22ypa"
      for="myUniqueId"
    >
      Email
    </label>
     
    <input
      class="input svelte-q22ypa"
      id="myUniqueId"
      type="email"
    />
     
  </div>
</section>
`;

exports[`Storyshots Input Help Text 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-q22ypa"
      for="myUniqueId"
    >
      Help text
    </label>
     
    <input
      class="input svelte-q22ypa"
      id="myUniqueId"
      type="text"
    />
     
    <span
      class="field-help svelte-q22ypa"
    >
      Some useful help text.
    </span>
  </div>
</section>
`;

exports[`Storyshots Input Help Text Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-large svelte-q22ypa"
      for="myUniqueId"
    >
      Help text large
    </label>
     
    <input
      class="input input-large svelte-q22ypa"
      id="myUniqueId"
      type="text"
    />
     
    <span
      class="field-help-large svelte-q22ypa"
    >
      Some useful help text.
    </span>
  </div>
</section>
`;

exports[`Storyshots Input Help Text Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-small svelte-q22ypa"
      for="myUniqueId"
    >
      Help text small
    </label>
     
    <input
      class="input input-small svelte-q22ypa"
      id="myUniqueId"
      type="text"
    />
     
    <span
      class="field-help-small svelte-q22ypa"
    >
      Some useful help text.
    </span>
  </div>
</section>
`;

exports[`Storyshots Input Inline Input 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-inline svelte-q22ypa"
      for="myUniqueId"
    >
      Inline input
    </label>
     
    <input
      class="input input-inline svelte-q22ypa"
      id="myUniqueId"
      type="text"
    />
     
  </div>
</section>
`;

exports[`Storyshots Input Invalid Text 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-error svelte-q22ypa"
      for="myUniqueId"
    >
      Invalid text
    </label>
     
    <input
      class="input input-error svelte-q22ypa"
      id="myUniqueId"
      type="text"
    />
     
    <span
      class="field-error svelte-q22ypa"
    >
      This field has errors.
    </span>
  </div>
</section>
`;

exports[`Storyshots Input Invalid Text Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-error label-large svelte-q22ypa"
      for="myUniqueId"
    >
      Invalid text large
    </label>
     
    <input
      class="input input-error input-large svelte-q22ypa"
      id="myUniqueId"
      type="text"
    />
     
    <span
      class="field-error-large svelte-q22ypa"
    >
      This field has errors.
    </span>
  </div>
</section>
`;

exports[`Storyshots Input Invalid Text Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-error label-small svelte-q22ypa"
      for="myUniqueId"
    >
      Invalid text small
    </label>
     
    <input
      class="input input-error input-small svelte-q22ypa"
      id="myUniqueId"
      type="text"
    />
     
    <span
      class="field-error-small svelte-q22ypa"
    >
      This field has errors.
    </span>
  </div>
</section>
`;

exports[`Storyshots Input Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-large svelte-q22ypa"
      for="myUniqueId"
    >
      Large input
    </label>
     
    <input
      class="input input-large svelte-q22ypa"
      id="myUniqueId"
      type="text"
    />
     
  </div>
</section>
`;

exports[`Storyshots Input Number 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-q22ypa"
      for="myUniqueId"
    >
      Number
    </label>
     
    <input
      class="input svelte-q22ypa"
      id="myUniqueId"
      type="number"
    />
     
  </div>
</section>
`;

exports[`Storyshots Input Password 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-q22ypa"
      for="myUniqueId"
    >
      Password
    </label>
     
    <input
      class="input svelte-q22ypa"
      id="myUniqueId"
      type="password"
    />
     
  </div>
</section>
`;

exports[`Storyshots Input Rounded 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-q22ypa"
      for="myUniqueId"
    >
      Rounded input
    </label>
     
    <input
      class="input input-rounded svelte-q22ypa"
      id="myUniqueId"
      type="text"
    />
     
  </div>
</section>
`;

exports[`Storyshots Input Search 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-q22ypa"
      for="myUniqueId"
    >
      Search
    </label>
     
    <input
      class="input svelte-q22ypa"
      id="myUniqueId"
      type="search"
    />
     
  </div>
</section>
`;

exports[`Storyshots Input Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-small svelte-q22ypa"
      for="myUniqueId"
    >
      Small input
    </label>
     
    <input
      class="input input-small svelte-q22ypa"
      id="myUniqueId"
      type="text"
    />
     
  </div>
</section>
`;

exports[`Storyshots Input Telephone 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-q22ypa"
      for="myUniqueId"
    >
      Telephone
    </label>
     
    <input
      class="input svelte-q22ypa"
      id="myUniqueId"
      type="tel"
    />
     
  </div>
</section>
`;

exports[`Storyshots Input Textarea 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-q22ypa"
      for="myUniqueId"
    >
      Textarea
    </label>
     
    <textarea
      class="input svelte-q22ypa"
      id="myUniqueId"
    />
     
  </div>
</section>
`;

exports[`Storyshots Input Textarea Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-large svelte-q22ypa"
      for="myUniqueId"
    >
      Textarea small
    </label>
     
    <textarea
      class="input input-large svelte-q22ypa"
      cols="5"
      id="myUniqueId"
      rows="10"
    />
     
  </div>
</section>
`;

exports[`Storyshots Input Textarea Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label label-small svelte-q22ypa"
      for="myUniqueId"
    >
      Textarea small
    </label>
     
    <textarea
      class="input input-small svelte-q22ypa"
      cols="5"
      id="myUniqueId"
      rows="10"
    />
     
  </div>
</section>
`;

exports[`Storyshots Input URL 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-q22ypa"
      for="myUniqueId"
    >
      URL
    </label>
     
    <input
      class="input svelte-q22ypa"
      id="myUniqueId"
      type="url"
    />
     
  </div>
</section>
`;

exports[`Storyshots Input Underlined 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-q22ypa"
      for="myUniqueId"
    >
      Underlined input
    </label>
     
    <input
      class="input input-underlined svelte-q22ypa"
      id="myUniqueId"
      type="text"
    />
     
  </div>
</section>
`;

exports[`Storyshots Input Underlined With Background 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="width-full"
  >
    <label
      class="label svelte-q22ypa"
      for="myUniqueId"
    >
      Underlined with background input
    </label>
     
    <input
      class="input input-underlined input-underlined-bg svelte-q22ypa"
      id="myUniqueId"
      type="text"
    />
     
  </div>
</section>
`;

exports[`Storyshots Progress Progress CSS 1`] = `
<section
  class="storybook-snapshot-container"
>
  <progress
    class="progress foo-bar-baz svelte-5xym5w"
    max="100"
    value="30"
  />
</section>
`;

exports[`Storyshots Progress Progress Test 1`] = `
<section
  class="storybook-snapshot-container"
>
  <progress
    class="progress svelte-5xym5w"
    max="100"
    value="30"
  />
</section>
`;
